@@ -61,10 +61,11 @@
        should be more generic, but it's a good start -->
 
   <device>
-    <match key="freebsd.driver" contains="ucom">
-      <match key="info.vendor" string="HTC">
+    <match key="@info.parent:freebsd.driver" contains="ucom">
+      <match key="@info.parent:info.vendor" string="HTC">
         <append key="info.capabilities" type="strlist">sync</append>
-
+        <append key="freebsd.unit" type="copy_property">@info.parent:freebsd.unit</append>
+	
         <merge key="pda.platform" type="string">pocketpc</merge>
 
         <merge key="usb.interface.description" type="string">Windows Mobile Data Provider</merge>
